--- a/index2.html
+++ b/index2.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8047537722016072" crossorigin="anonymous"></script>
 <title>Welcome The New World</title>
-    <style>
+      <div align="center">
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8047537722016072" crossorigin="anonymous"></script>
+      </div>
+          <style>
         body {
             background-color: black;
             color: white;
