--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bem-Vindo a Nova Era</title>
+    </head>
     <style>
 		body {
             background-color: black;
