--- a/index.html
+++ b/index.html
@@ -68,6 +68,18 @@
     </style>
 </head>
 <body>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8047537722016072"
+     crossorigin="anonymous"></script>
+<!-- Teste n01 -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8047537722016072"
+     data-ad-slot="5887720067"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
     <div class="container">
         <h1>Nosso Propósito</h1>
 
