--- a/index2.html
+++ b/index2.html
@@ -176,6 +176,7 @@
             width: 100%;
         }
     </style>
+<head>
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8047537722016072" crossorigin="anonymous"></script>
 </head>
 <body>
