--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
     </style>
 </head>
 <body>
+	<amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-8047537722016072">
+</amp-auto-ads>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8047537722016072"
      crossorigin="anonymous"></script>
 <!-- Teste n01 -->
