--- a/index2.html
+++ b/index2.html
@@ -180,6 +180,9 @@
       <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8047537722016072" crossorigin="anonymous"></script>
 </head>
 <body>
+      <amp-auto-ads type="adsense"
+        data-ad-client="ca-pub-8047537722016072">
+</amp-auto-ads>
     <div id="login-container">
         <h2>.°. Bem Vindo ao Inicio .°.</h2>
         <h3> .º. - Junte-se a Nos - .º. </h3>.
